--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Contact page with form" />
-    <meta name="keywords" content="contact, form, support, phone, email, socials" />
-    <meta name="author" content="Roxanne Franco" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact page with form">
+    <meta name="keywords" content="contact, form, support, phone, email, socials">
+    <meta name="author" content="Roxanne Franco">
     <!-- Hotjar Tracking Code for https://mybergen.netlify.app/ -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -19,7 +19,7 @@
             a.appendChild(r);
         })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>MyBergen | Contact</title>
 </head>
 
@@ -28,7 +28,7 @@
     <div class="nav-bar">
         <div class="center-content">
             <div class="logo">
-                <a href="index.html"><img src="images/Logo.svg" alt="logo" /></a>
+                <a href="index.html"><img src="images/Logo.svg" alt="logo"></a>
             </div>
             <nav class="menu">
                 <ul>
@@ -44,8 +44,8 @@
                     </li>
                 </ul>
             </nav>
-            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg"><img class="open"
-                    src="images/menu.svg">
+            <div class="menu-mobile-buttons"><img class="close" src="images/x.svg" alt="close icon"><img class="open"
+                    src="images/menu.svg" alt="hamburguer menu icon">
             </div>
         </div>
     </div>
@@ -57,21 +57,21 @@
             <p class="posts-pg">Anything you want to ask?</p>
             <p class="posts-pg">Feel free to fill the form or reach out through my socials!</p>
             <div class="socials">
-                <a href="https://www.facebook.com/"><img src="images/fb.svg" \></a>
-                <a href="https://www.instagram.com/"><img src="images/instagram.svg" \></a>
-                <a href="https://www.youtube.com/"><img src="images/youtube.svg" \></a>
-                <a href="https://www.twitter.com/"><img src="images/twitter.svg" \></a>
+                <a href="https://www.facebook.com/"><img src="images/fb.svg" alt="facebook icon"></a>
+                <a href="https://www.instagram.com/"><img src="images/instagram.svg" alt="instagram icon"></a>
+                <a href="https://www.youtube.com/"><img src="images/youtube.svg" alt="youtube icon"></a>
+                <a href="https://www.twitter.com/"><img src="images/twitter.svg" alt="twitter icon"></a>
             </div>
             <div class="contact-container">
                 <div id="success"></div>
                 <form id="contact-form">
-                    <input id="name" type="text" placeholder="Name" />
+                    <input id="name" type="text" placeholder="Name">
                     <span class="name-error error-message"></span>
-                    <input id="email" type="email" placeholder="Email" />
+                    <input id="email" type="email" placeholder="Email">
                     <span class="email-error error-message"></span>
-                    <input id="subject" type="text" placeholder="Subject" />
+                    <input id="subject" type="text" placeholder="Subject">
                     <span class="subject-error error-message"></span>
-                    <textarea id="textarea" type="text" placeholder="Message"></textarea>
+                    <textarea id="textarea" placeholder="Message"></textarea>
                     <span class="textarea-error error-message"></span>
                     <div class="button-message">
                         <button class="cta-main" type="submit">Send</button>
